[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
-            <h1>shubham</h1>
+            <h1>this is shubham</h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
