--- a/ui/index.html
+++ b/ui/index.html
@@ -1,1 +1,20 @@
-console.log('Loaded!');
+<!doctype html>
+ <html>
+     <head>
+         <link href="/ui/style.css" rel="stylesheet" />
+     </head>
+     <body>
+         <div class="center">
+             <img src="/ui/madi.png" class="img-medium"/>
+         </div>
+         <br>
+         <div class="center text-big bold">
+              Hi! I am your webapp.
+              <h1>this is shubham</h1>
+          </div>
+ -        <script type="text/javascript" src="/ui/main.js">
+ -        </script>
+ +        
+ +        
+      </body>
+  </html>
