--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,10 @@
               Hi! I am your webapp.
               <h1>this is shubham</h1>
           </div>
+          <div>
+              hi this is a button <button>Click Here</button><br>
+              this button is clicked <span id="mybtn">0</span>times
+          </div>
  -        <script type="text/javascript" src="/ui/main.js">
  -        </script>
  +        
