[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
               Hi! I am your webapp.
               <h1>this is shubham</h1>
           </div>
-          <div>
+          <div class="center" text-big bold>
               hi this is a button <button>Click Here</button><br>
               this button is clicked <span id="mybtn">0</span>times
           </div>
