--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,8 @@
               <h1>this is shubham</h1>
           </div>
           <div class="center text-big bold">
-              hi this is a button <button>Click Here</button><br>
-              this button is clicked <span id="mybtn">0</span>times
+              hi this is a button <button id="mybtn">Click Here</button><br>
+              this button is clicked <span id="count">0</span>times
           </div>
  -        <script type="text/javascript" src="/ui/main.js">
  -        </script>
