--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,9 @@
           </div>
           <div class="center text-big bold">
               hi this is a button <button id="mybtn">Click Here</button><br>
-              this button is clicked <span id="count">0</span>times
+              this button is clicked <span id="count">0</span>times<br>
+              <input type="text" id="name" placeholder="name"><input>
+              <button type="submit" value="submit" id="submit_btn"></button>
           </div>
  -        <script type="text/javascript" src="/ui/main.js">
  -        </script>
