--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
           <div class="center text-big bold">
               hi this is a button <button id="mybtn">Click Here</button><br>
               this button is clicked <span id="count">0</span>times<br>
-              <input type="text" id="name" placeholder="name"><input>
+              <input type="text" id="name" placeholder="name">
               <button type="submit" value="submit" id="submit_btn"></button>
           </div>
  -        <script type="text/javascript" src="/ui/main.js">
