[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
               hi this is a button <button id="mybtn">Click Here</button><br>
               this button is clicked <span id="count">0</span>times<br>
               <input type="text" id="name" placeholder="name">
-              <button type="submit" value="submit" id="submit_btn"></button>
+              <button type="submit" value="Submit" id="submit_btn"></button>
           </div>
  -        <script type="text/javascript" src="/ui/main.js">
  -        </script>
