--- a/ui/index.html
+++ b/ui/index.html
@@ -1,26 +1,24 @@
 <!doctype html>
- <html>
-     <head>
-         <link href="/ui/style.css" rel="stylesheet" />
-     </head>
-     <body>
-         <div class="center">
-             <img src="/ui/madi.png" class="img-medium"/>
-         </div>
-         <br>
-         <div class="center text-big bold">
-              Hi! I am your webapp.
-              <h1>this is shubham</h1>
-          </div>
-          <div class="center text-big bold">
-              hi this is a button <button id="mybtn">Click Here</button><br>
-              this button is clicked <span id="count">0</span>times<br>
-              <input type="text" id="name" placeholder="name">
-              <button type="submit" value="Submit" id="submit_btn"></button>
-          </div>
- -        <script type="text/javascript" src="/ui/main.js">
- -        </script>
- +        
- +        
-      </body>
-  </html>
+<html>
+ <head>
+     <link href="/ui/style.css" rel="stylesheet" />
+ </head>
+ <body>
+     <div class="center">
+         <img src="/ui/madi.png" class="img-medium"/>
+     </div>
+     <br>
+     <div class="center text-big bold">
+          Hi! I am your webapp.
+          <h1>this is shubham</h1>
+      </div>
+      <div class="center text-big bold">
+          hi this is a button <button id="mybtn">Click Here</button><br>
+          this button is clicked <span id="count">0</span>times<br>
+          <input type="text" id="name" placeholder="name">
+          <input type="submit" value="Submit" id="submit_btn">
+      </div>
+      <script type="text/javascript" src="/ui/main.js">
+      </script>
+  </body>
+</html>
