[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,7 @@
           this button is clicked <span id="count">0</span>times<br>
           <input type="text" id="name" placeholder="name">
           <input type="submit" value="Submit" id="submit_btn">
+          <ul id="newlist"></ul>
       </div>
       <script type="text/javascript" src="/ui/main.js">
       </script>
