[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,14 +10,12 @@
      <br>
      <div class="center text-big bold">
           Hi! I am your webapp.
-          <h1>this is shubham</h1>
+          <h1>Login to continue</h1>
       </div>
       <div class="center text-big bold">
-          hi this is a button <button id="mybtn">Click Here</button><br>
-          this button is clicked <span id="count">0</span>times<br>
-          <input type="text" id="name" placeholder="name">
-          <input type="submit" value="Submit" id="submit_btn">
-          <ul id="newlist" class="list"></ul>
+          <input type="text" id="username" placeholder="username"/>
+          <input type="password" id="password"/>
+          <input type="submit" value="Submit" id="submit_btn"/>
       </div>
       <script type="text/javascript" src="/ui/main.js">
       </script>
