--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,8 @@
           <input type="password" id="password"/>
           <input type="submit" value="Submit" id="submit_btn"/>
       </div>
+      <h3>if not registered <a href="#"></a>Sign Up</a></h3>
+      
       <script type="text/javascript" src="/ui/main.js">
       </script>
   </body>
