--- a/ui/create-user.html
+++ b/ui/create-user.html
@@ -1,1 +1,26 @@
+<!doctype html>
+<html>
+ <head>
+     <link href="/ui/style.css" rel="stylesheet" />
+ </head>
+ <body>
+     <div class="center">
+         <img src="/ui/madi.png" class="img-medium"/>
+     </div>
+     <br>
+     <div class="center text-big bold">
+          Hi! I am your webapp.
+          <h1>fill the details to Sign Up</h1>
+      </div>
+      <div class="center text-big bold">
+          <input type="text" id="username" placeholder="username"/>
+          <input type="password" id="password"/>
+          <input type="submit" value="Sign Up" id="submit_btn2"/>
+          <h3>if not registered <a href="#">Sign Up</a></h3>
 
+      </div>
+      
+      <script type="text/javascript" src="/ui/main.js">
+      </script>
+  </body>
+</html>
