--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
           <input type="text" id="username" placeholder="username"/>
           <input type="password" id="password"/>
           <input type="submit" value="Submit" id="submit_btn"/>
-          <h3>if not registered <a href="/ui/sign-up.html">Sign Up</a></h3>
+          <h3>if not registered <a href="/sign-up.html">Sign Up</a></h3>
 
       </div>
       
