[imad-console] Updates sign-up.html

--- a/sign-up.html
+++ b/sign-up.html
@@ -15,7 +15,7 @@
       <div class="center text-big bold">
           <input type="text" id="username" placeholder="username"/>
           <input type="password" id="password"/>
-          <input type="submit" value="Sign Up" id="submit_btn2"/>
+          <input type="submit" value="Sign Up" id="ssst"/>
       </div>
       
       <script type="text/javascript" src="/ui/main.js">
