[imad-console] Updates sign-up.html

--- a/sign-up.html
+++ b/sign-up.html
@@ -15,10 +15,10 @@
       <div class="center text-big bold">
           <input type="text" id="username" placeholder="username"/>
           <input type="password" id="password"/>
-          <input type="submit" value="Sign Up" id="ssst"/>
+          <input type="submit" value="Sign Up" id="submit_btn"/>
       </div>
       
-      <script type="text/javascript" src="/ui/main.js">
+      <script type="text/javascript" src="/sign-up.js">
       </script>
   </body>
 </html>
