[imad-console] Updates sign-up.html

--- a/sign-up.html
+++ b/sign-up.html
@@ -18,7 +18,7 @@
           <input type="submit" value="Sign Up" id="submit_btn"/>
       </div>
       
-      <script type="text/javascript" src="/sign-up.js">
+      <script type="text/javascript" src="/signup.js">
       </script>
   </body>
 </html>
