[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
           Hi! I am your webapp.
           
       </div>
-      <div class="center text-big bold">
+      <div class="login_area center text-big bold">
           <h3>if not registered <a href="/sign-up">Sign Up</a></h3>
           <h1>Login to continue</h1>
           <input type="text" id="username" placeholder="username"/>
