[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,13 +12,9 @@
           Hi! I am your webapp.
           
       </div>
-      <div class="login_area center text-big bold">
-          <h3>if not registered <a href="/sign-up">Sign Up</a></h3>
-          <h3>Login to continue</h3>
-          <input type="text" id="username" placeholder="username"/>
-          <input type="password" id="password"/>
-          <input type="submit" value="Submit" id="submit_btn"/>
+      <div class="center text-big bold" id='login_area'>
       </div>
+      <div id='articles' class='center text-big bold'></div>
       
       <script type="text/javascript" src="/ui/main.js">
       </script>
