[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
       </div>
       <div class="center text-big bold" id='login_area'>
       </div>
+      <div id='login_area'></div>
       <div id='articles' class='center text-big bold'></div>
       
       <script type="text/javascript" src="/ui/main.js">
