[imad-console] Updates sign-up.html

--- a/sign-up.html
+++ b/sign-up.html
@@ -14,6 +14,7 @@
       </div>
       <div class="center text-big bold">
           <input type="text" id="username" placeholder="username"/>
+          <input type="text" id="profile_pic" placeholder="Link of Image">
           <input type="password" id="password"/>
           <input type="submit" value="Sign Up" id="submit_btn"/>
       </div>
